fix: switched to alias resolving of paths in vite

--- a/resources/css/cp.css
+++ b/resources/css/cp.css
@@ -1,7 +1,8 @@
 @font-face {
     font-family: 'Material Symbols Outlined';
     font-style: normal;
-    src: url(../fonts/MaterialSymbolsOutlined-Regular.ttf) format('woff');
+    font-weight: 400;
+    src: url('@/fonts/MaterialSymbolsOutlined-Regular.ttf') format('truetype');
 }
 
 .material-symbols-outlined {
