--- a/resources/css/cp.css
+++ b/resources/css/cp.css
@@ -2,7 +2,7 @@
     font-family: 'Material Symbols Outlined';
     font-style: normal;
     font-weight: 400;
-    src: url('/vendor/fairu-statamic/fonts/MaterialSymbolsOutlined-Regular.ttf') format('truetype');
+    src: url('../fonts/MaterialSymbolsOutlined-Regular.ttf') format('truetype');
 }
 
 .material-symbols-outlined {
